fix broken links when pushed to production

--- a/app/views/administrations/index.html.erb
+++ b/app/views/administrations/index.html.erb
@@ -18,7 +18,7 @@
 	
 
 </body>
-<!-- 
+<% if false %>
 <table>
   <thead>
     <tr>
@@ -40,4 +40,4 @@
 <br>
 
 <%= link_to 'New Administration', new_administration_path %>
- -->
+<% end %>
