--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -24,7 +24,7 @@ Welcome to ShopComm !
 
 </body>
 
-<!-- 
+<% if false %> 
 <h1>Listing homepages</h1>
 
 <table>
@@ -48,4 +48,4 @@ Welcome to ShopComm !
 <br>
 
 <%= link_to 'New Homepage', new_homepage_path %>
- -->
+<% end %>
