--- a/app/views/product_listings/index.html.erb
+++ b/app/views/product_listings/index.html.erb
@@ -12,7 +12,7 @@
 
 </body> 
 
-<!-- 
+<% if false %> 
 <h1>Listing product_listings</h1>
 
 <table>
@@ -36,4 +36,4 @@
 <br>
 
 <%= link_to 'New Product listing', new_product_listing_path %>
- -->
+<% end %>
