--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -28,7 +28,7 @@
 
 </body> 
 
-<!-- 
+<% if false %>
 <h1>Listing purchases</h1>
 
 <table>
@@ -52,4 +52,4 @@
 <br>
 
 <%= link_to 'New Purchase', new_purchase_path %>
- -->
+<% end %>
