--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -35,7 +35,7 @@ Confirm Password: <br>
 
 </body>
 
-<!-- 
+<% if false %> 
 <h1>Listing registrations</h1>
 
 <table>
@@ -59,4 +59,4 @@ Confirm Password: <br>
 <br>
 
 <%= link_to 'New Registration', new_registration_path %>
- -->
+<% end %>
