--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -43,7 +43,7 @@
 
 </body> 
 
-<!-- 
+<% if false %>
 <h1>Listing payments</h1>
 
 <table>
@@ -67,4 +67,4 @@
 <br>
 
 <%= link_to 'New Payment', new_payment_path %>
- -->
+<% end %>
