fix street name display

--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -10,7 +10,7 @@
   <h4>Shipping Address</h4>
   
   <label for="payment_method">Payment Method:</label><br>
-  <input type="text" id="payment_method" name="payment_method">
+  <input type="text" id="payment_method" name="payment_method"><br>
   
   <label for="street">Street name:</label><br>
   <input type="text" id="street" name="street"><br>
