--- a/app/assets/stylesheets/homepage.css.scss
+++ b/app/assets/stylesheets/homepage.css.scss
@@ -4,6 +4,12 @@
 
 .navigation-bar {
 	ul {
+		list-style-type: none
+	}
+}
+
+.navigation-bar {
+	ul {
 		li {
 			display: inline;
 			padding-right: 20px;
