pluralize some controller names to follow convention; product-listing displays all products and one can also view individual products

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,12 @@
 	<div class="navigation-bar">
 		<ul>
 			<% if cookies[:role] == "Site Administrator" || cookies[:role] == "Vendor Administrator" %>
-				<li><%= link_to "Administration", administration_path %></li>
+				<li><%= link_to "Administration", administrations_path %></li>
 			<% end %>
 			<% if cookies[:role] != "Customer" %>
 				<li><%= link_to "Product Management", product_management_path %></li>
 			<% end %>
-			<li><%= link_to "Products", product_listings_path %></li>
+			<li><%= link_to "Products", products_path %></li>
 			<li><%= link_to "Purchase History", purchase_history_path %></li>
 		</ul>
 	</div>
