added functionality for displaying list of all users and roles to view usernames before assigning roles

--- a/app/views/administrations/index.html.erb
+++ b/app/views/administrations/index.html.erb
@@ -14,6 +14,9 @@
     		<option value="vendor_manager">Vendor Manager</option>
     	</select>	
     	<input type="submit" value="Assign Role">
+      <p>
+        <%= link_to "list of all users and roles", users_path %>
+      </p>
     </form>
   </div>
 
