--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Registration</h1>
 
-<%= form_for('', url: {controller: :users, action: :new}) do %>
+<%= form_for('', url: {controller: :users, action: :create}) do %>
 	<table>
 		<% @userColumns.each do |userColumn| %>
 			<tr>
