--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,7 +14,7 @@
 					<td><%= user.username %></td>
 					<td><%= user.firstname %></td>
 					<td><%= user.lastname %></td>
-					<td><%= user.role %></td>
+					<td><%= user.role.role %></td>
 				</tr>
 			<% end %>
 		</tbody>
