--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,10 +13,12 @@
 				<tr>
 					<td><%= user.username %></td>
 					<td><%= user.firstname %></td>
-					<td><%= user.lastname %></td>
+					<td><%= user.lastname %></td>		
 					<td><%= user.role.role %></td>
 				</tr>
 			<% end %>
 		</tbody>
 	</table>
+
+	<%= link_to "Back", :administrations %>
 </body>
