added validation for registration form and refactored scripts for registration

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -35,7 +35,7 @@
 
 </div>
 
-<h1>Welcome to ShopCommCanada!</h1>
+<% @page_title = "Welcome to ShopCommCanada!" %>
 
 <div class="product-listings">
 	<h3>Products of the Day</h3>
