--- a/app/views/administrations/index.html.erb
+++ b/app/views/administrations/index.html.erb
@@ -4,37 +4,36 @@
   <h1>Administration</h1>
 </div>
 
-<div class="container">
-  <div id="role-assignment">
-    <form>
-      <h4><label for="username">Assign role to user</label></h4>
-    	<input type="text" id="username" name="Username" placeholder="Username">
-    	<select>
-    		<option value="vendor_admin">Vendor Admin</option>
-    		<option value="vendor_manager">Vendor Manager</option>
-    	</select>	
-    	<input type="submit" value="Assign Role">
-      <p>
-        <%= link_to "list of all users and roles", :users %>
-      </p>
-    </form>
-  </div>
 
-
-  <%= content_tag(:table) do %>
-    <%= draw_user_role_columns %>
-    <% @user_list.each do |user| %>
-      <tr>
-        <td><%= user.username %></td>
-        <td><%= user.firstname %></td>
-        <td><%= user.lastname %></td>
-        <td><%= user.role.role %></td>
-        <td><%= link_to "delete", user, method: :delete %></td>
-      </tr>
-    <% end %>
-  <% end %>
-
+<div id="role-assignment">
+  <h1>Assign role to user</h1>
+  <%= form_for(:user, url: {controller: :users, action: :edit}) do |f| %>
+  	<input type="text" id="username" name="Username" placeholder="Username">
+  	<select name="role-id">
+  		<option value="2">Vendor Admin</option>
+  		<option value="3">Vendor Manager</option>
+  	</select>	
+  	<input type="submit" value="Assign Role">
+    <p>
+      <%= link_to "list of all users and roles", :users %>
+    </p>
+  </form>
 </div>
+
+
+<%= content_tag(:table) do %>
+  <%= draw_user_role_columns %>
+  <% @user_list.each do |user| %>
+    <tr>
+      <td><%= user.username %></td>
+      <td><%= user.firstname %></td>
+      <td><%= user.lastname %></td>
+      <td><%= user.role.role %></td>
+      <td><%= link_to "delete", user, method: :delete %></td>
+    </tr>
+  <% end %>
+<% end %>
+
 
 </body>
 
