--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,8 +15,8 @@
 		<tr>
 			<td><%= @product.name %></td>
 			<td><%= @product.price %></td>
-			<td><%= @product.brand %></td>
-			<td><%= @product.category %></td>
+			<td><%= @product.brand.name %></td>
+			<td><%= @product.category.name %></td>
 			<td><%= @product.created_at %></td>
 			<td><%= @product.updated_at %></td>
 		</tr>
