validate selection of option in dropdown boxes in administration and fix bug where invalid username generates terminating error

--- a/app/views/administrations/index.html.erb
+++ b/app/views/administrations/index.html.erb
@@ -5,8 +5,9 @@
 <%# http://stackoverflow.com/questions/8907867/can-someone-explain-collection-select-to-me-in-clear-simple-terms %>
 <div id="role-assignment">
   <h3>Assign role to user</h3>
-  <%= form_for(:user, controller: :administrations, action: :assign_role, method: :put) do |f| %>
+  <%= form_for(:user, url: assign_role_path, action: :assign_role, method: :put) do |f| %>
     <p> Username <%= f.text_field :username %> </p>
+    <p> <%= flash[:assign_role_status] %> </p>
     <%= collection_select(:role, :role_id, Role.where(id: @_role_id), :id, :name_with_initial, prompt: true) %>
     <%= f.submit 'Assign Role' %>
   <% end %>
