--- a/app/views/administrations/index.html.erb
+++ b/app/views/administrations/index.html.erb
@@ -6,7 +6,7 @@
 <div id="role-assignment">
   <h3>Assign role to user</h3>
   <%= form_for(:user, url: assign_role_path, action: :assign_role, method: :put) do |f| %>
-    <p> Username <%= f.text_field :username %> </p>
+    <p> Username <%= f.text_field :username, value: '' %> </p>
     <p> <%= flash[:assign_role_status] %> </p>
     <%= collection_select(:role, :role_id, Role.where(id: @_role_id), :id, :name_with_initial, prompt: true) %>
     <%= f.submit 'Assign Role' %>
