link product, sales and vendor; create join tables; initialize data for sales

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -12,7 +12,7 @@
 	<%= submit_tag "Add to Products" %>
 <% end %>
 
-<%# display all products being sold by a user %>
+<%# display all products being sold by vendor corresponding to user %>
 <table>
 	<thead>
 		<th>ID</th>
