--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,7 +1,7 @@
 <body>
 
 <h1>Product Management</h1>
-<h3>Vendor: <%= @vendor or "Unassigned" %> </h3>
+<h3>Vendor: <%= @vendor_name or "Unassigned" %> </h3>
 
 <%= form_for(:products, url: product_management_path, action: :new) do |f| %>
 	<p> Product Name <%= f.text_field :name %> </p>
@@ -15,16 +15,18 @@
 <%# display all products being sold by vendor corresponding to user %>
 <table>
 	<thead>
-		<th>ID</th>
-		<th>Product</th>
-		<th>Quantity</th>
-		<th></th>
+		<tr>
+			<th>Product</th>
+			<th></th>
+		</tr>
 	</thead>
 	<tbody>
-		<td>123</td>
-		<td>IPhone 9</td>
-		<td><%= text_field(:post, :quantity, size: 3, value: 1) %></td>
-		<td>Delete</td>
+		<% @vendor_products.each do |vendor_product| %>
+			<tr>
+				<td><%= vendor_product.name %></td>
+				<td><%= link_to "Delete", method: :delete %></td>
+			</tr>
+		<% end %>
 	</tbody>
 </table>
 
