--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,8 +15,8 @@
 			<td><%= @product.name %></td>
 			<td><%= @product.brand.name %></td>
 			<td><%= @product.category.name %></td>
-			<td><%= @product.created_at %></td>
-			<td><%= @product.updated_at %></td>
+			<td><%= @product.created_at.strftime("%B %d, %Y") %></td>
+			<td><%= @product.updated_at.strftime("%B %d, %Y") %></td>
 		</tr>
 	</tbody>
 </table>
