--- a/app/views/purchase_history/index.html.erb
+++ b/app/views/purchase_history/index.html.erb
@@ -13,12 +13,10 @@
 	</thead>
 	<tbody>
 		<tr>
-			<td>12</td>
-			<td>IPhone 6</td>
-			<td>March 5, 2015</td>
-			<td>View</td>
 		</tr>
 	</tbody>
 </table>
+
+<p>This page will be up sometime in the future.</p>
 
 </body>
