--- a/app/views/thank_you/index.html.erb
+++ b/app/views/thank_you/index.html.erb
@@ -1,3 +1,5 @@
+<%# /views/thank_you/index.html.erb %>
+
 <body>
 	<h1>Thank you for your purchase!</h1>
 	<p>We hope to continue providing our customers with awesome products</p>
