--- a/app/views/administrations/index.html.erb
+++ b/app/views/administrations/index.html.erb
@@ -19,16 +19,18 @@
 <h3>Users with assigned roles</h3>
 <%= content_tag(:table) do %>
   <%= draw_user_role_columns %>
-  <% @user_list.each do |user| %>
-    <tr>
-      <td><%= user.username %></td>
-      <td><%= user.firstname %></td>
-      <td><%= user.lastname %></td>
-      <td><%= user.role.role %></td>
-      <td><%= link_to "unassign", user_unassign_role_path(user.id), method: :put %></td>
-      <td><%= link_to "delete", user, method: :delete, data: {confirm: "This will permanently delete the user from the database. Do you want to continue?"} %></td>
-    </tr>
-  <% end %>
+  <tbody>
+    <% @user_list.each do |user| %>
+      <tr>
+        <td><%= user.username %></td>
+        <td><%= user.firstname %></td>
+        <td><%= user.lastname %></td>
+        <td><%= user.role.role %></td>
+        <td><%= link_to "unassign", user_unassign_role_path(user.id), method: :put %></td>
+        <td><%= link_to "delete", user, method: :delete, data: {confirm: "This will permanently delete the user from the database. Do you want to continue?"} %></td>
+      </tr>
+    <% end %>
+  </tbody>
 <% end %>
 
 </body>
