--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,26 +1,21 @@
 <%# /views/users/index.html.erb %>
 
 <body>
-	<table>
-		<thead>
+
+<%= content_tag(:table) do %>
+	<%= draw_user_role_columns %>
+	<tbody>
+		<% @users.each do |user| %>
 			<tr>
-				<th>Username</th>
-				<th>First Name</th>
-				<th>Last Name</th>
-				<th>Role</th>
+				<td><%= user.username %></td>
+				<td><%= user.firstname %></td>
+				<td><%= user.lastname %></td>		
+				<td><%= user.role.role %></td>
+				<td><%= link_to "Delete", user, method: :delete, data: {confirm: "This will permanently delete the user from the database. Do you want to continue?"} %></td>
 			</tr>
-		</thead>
-		<tbody>
-			<% @users.each do |user| %>
-				<tr>
-					<td><%= user.username %></td>
-					<td><%= user.firstname %></td>
-					<td><%= user.lastname %></td>		
-					<td><%= user.role.role %></td>
-				</tr>
-			<% end %>
-		</tbody>
-	</table>
+		<% end %>
+	</tbody>
+<% end %>
 
 	<%= link_to "Back", :administrations %>
 </body>
